# TFG-2

./: Creación e implantación de un sistema IoT basado en ESP-32 para el análisis de espectros VIS-NIR.docx  README.md  ~$eación e implantación de un sistema IoT basado en ESP-32 para el análisis de espectros VIS-NIR.docx  ~WRL2385.tmp
Machine Learning/: api_ml.py  app.py  entrenador.py  escalador.pkl  espectroscopia_Espidifen.csv  espectroscopia_Papel verde 2.csv  espectroscopia_Prueba agua 2.csv  espectroscopia_Prueba agua.csv  iniciarServidor.txt
Machine Learning/datos_materiales/: espectroscopia_Agua Salada en Tarro.csv  espectroscopia_Agua en Tarro.csv  espectroscopia_Papel Amarillo.csv  espectroscopia_Papel Azul.csv  espectroscopia_Papel Azul2.csv  espectroscopia_Papel Naranja.csv  espectroscopia_Papel Verde.csv  espectroscopia_papel naranja 2.csv
Machine Learning/modelos_guardados/: Modelo de papeles.pkl  modelo_aguas.pkl  modelo_materiales.pkl  modelo_nuevo.pkl  modelo_nuevo3.pkl
TFG/: .cproject  .project  README.md  sdkconfig  sdkconfig.old
TFG/include/: as7265x.h  oled.h  thingsboard_control.h  web_server.h  wifi_ap.h
TFG/main/: CMakeLists.txt  Kconfig.projbuild  as7265x.c  main.c  oled.c  thingsboard_control.c  web_server.c  wifi_ap.c
